# Icosahedron

./: CMakeLists.txt  LICENSE  README.md
examples/: WindowExample.cpp  main.cpp
examples/2D/: AnimatedSprites.cpp  Framebuffer.cpp  Mesh2D.cpp  TexturedRectangle.cpp  Transparency.cpp
examples/3D/: Bloom.cpp  (+10 more)
libs/Icosahedron/: CMakeLists.txt
libs/Icosahedron/include/Icosahedron/: Application.h  Core.h  Debug.h  Events.h  Global.h  Renderer.h
libs/Icosahedron/include/Icosahedron/assets/loaders/: AssimpModelLoader.h  CubemapLoader.h  FontLoader.h  OBJLoader.h  ShaderLoader.h  TextureAtlasLoader.h  TextureLoader.h
libs/Icosahedron/include/Icosahedron/assets/modeling/: OBJLoader.h
libs/Icosahedron/include/Icosahedron/audio/: Audio.h  AudioSource.h  Music.h  Sound.h
libs/Icosahedron/include/Icosahedron/entity/: Component.h  ECS.h  Entities.h  Entity.h
libs/Icosahedron/include/Icosahedron/files/: File.h
libs/Icosahedron/include/Icosahedron/graphics/: Color.h  Colors.h  FreeType.h  Image.h  ImageIO.h  Images.h  TextAtlas.h
libs/Icosahedron/include/Icosahedron/graphics/gl/: Batch.h  BatchTest.h  Cubemap.h  Framebuffer.h  GL.h  GLStateHandler.h  Shader.h  Shaders.h  Texture.h  TextureArray.h  TextureAtlas.h  VertexArray.h
libs/Icosahedron/include/Icosahedron/graphics/rendering/: TextRenderer.h
libs/Icosahedron/include/Icosahedron/input/: Input.h  InputHandler.h  KeyboardController.h  MouseController.h  WASDController.h
libs/Icosahedron/include/Icosahedron/math/: EarClippingTriangulation.h  Interpolation.h  Mathf.h  Matrices.h  Matrix.h
libs/Icosahedron/include/Icosahedron/math/geom/: Bezier.h  Circle.h  Polygon.h  Quadtree.h  Quaternion.h  Rasterization.h  Raycast.h  Rectangle.h  Spring2D.h  Spring3D.h  Vector.h  Vectors.h
libs/Icosahedron/include/Icosahedron/scene/: Mesh.h  Model.h  SceneGraph.h
libs/Icosahedron/include/Icosahedron/scene/2d/: Camera2D.h  Mesh2D.h  PolygonShape.h  RectangleShape.h  Shape2D.h
libs/Icosahedron/include/Icosahedron/scene/3d/: Camera3D.h  CameraFrustrum3D.h  Mesh3D.h  Skybox.h
libs/Icosahedron/include/Icosahedron/scene/3d/controllers/: FreeRoamCameraController3D.h  OrbitalCameraController3D.h
libs/Icosahedron/include/Icosahedron/util/: GeometryGenerator.h  IO.h  Log.h  Noise.h  Time.h
libs/Icosahedron/src/: Application.cpp  Debug.cpp  Renderer.cpp
libs/Icosahedron/src/assets/loaders/: CubemapLoader.cpp  FontLoader.cpp  OBJLoader.cpp  ShaderLoader.cpp  TextureLoader.cpp
libs/Icosahedron/src/assets/modeling/: OBJLoader.cpp
libs/Icosahedron/src/audio/: Audio.cpp  Music.cpp  Sound.cpp
libs/Icosahedron/src/files/: File.cpp
libs/Icosahedron/src/graphics/: FreeType.cpp  Image.cpp  ImageIO.cpp  Images.cpp  TextAtlas.cpp  color.cpp
libs/Icosahedron/src/graphics/gl/: Batch.cpp  Cubemap.cpp  Framebuffer.cpp  GL.cpp  GLStateHandler.cpp  Shader.cpp  Texture.cpp  TextureArray.cpp  TextureAtlas.cpp  VertexArray.cpp
libs/Icosahedron/src/input/: InputHandler.cpp  KeyboardController.cpp  MouseController.cpp  WASDController.cpp
libs/Icosahedron/src/math/: EarClippingTriangulation.cpp  Interpolation.cpp  Mathf.cpp
libs/Icosahedron/src/math/geom/: Bezier.cpp  Rasterization.cpp  Raycast.cpp  Vector.cpp
libs/Icosahedron/src/scene/: Mesh.cpp  Model.cpp
libs/Icosahedron/src/scene/2d/: Camera2D.cpp  Mesh2D.cpp  PolygonShape.cpp  RectangleShape.cpp
libs/Icosahedron/src/scene/3d/: Camera3D.cpp  Mesh3D.cpp  Skybox.cpp
libs/Icosahedron/src/scene/3d/controllers/: FreeRoamCameraController3D.cpp  OrbitalCameraController3D.cpp
libs/Icosahedron/src/util/: GeometryGenerator.cpp  IO.cpp  Noise.cpp  Time.cpp
libs/Physics/: CMakeLists.txt
libs/Physics/include/Physics/: Collider.h  CollisionUtils.h  Manifold.h  ManifoldPoints.h  Solver.h  Transform.h
libs/Physics/include/Physics/2d/: Collider2D.h  CollisionUtils2D.h  Manifold2D.h  ManifoldPoints2D.h  Solver2D.h  Transform2D.h
libs/Physics/include/Physics/2d/forces/: Force2D.h  Gravity2D.h  WindForce2D.h
libs/Physics/include/Physics/2d/levels/: ObjectLevel2D.h  PhysicsLevel2D.h
libs/Physics/include/Physics/2d/objects/: Object2D.h  RigidObject2D.h  SpringMassSystem2D.h
libs/Physics/include/Physics/3d/: Collider3D.h  CollisionUtils3D.h  Manifold3D.h  ManifoldPoints3D.h  Solver3D.h  Transform3D.h
libs/Physics/include/Physics/3d/forces/: Force3D.h  Gravity3D.h  WindForce3D.h
libs/Physics/include/Physics/3d/levels/: PhysicsLevel3D.h
libs/Physics/include/Physics/3d/objects/: Object3D.h  RigidObject3D.h
libs/Physics/include/Physics/forces/: Force.h  Gravity.h  WindForce.h
libs/Physics/include/Physics/levels/: PhysicsLevel.h
libs/Physics/include/Physics/objects/: Object.h  RigidObject.h
libs/Physics/src/: Collider.cpp  CollisionUtils.cpp  Solver.cpp  Transform.cpp
libs/Physics/src/2d/: Collider2D.cpp  CollisionUtils2D.cpp  Solver2D.cpp  Transform2D.cpp
libs/Physics/src/2d/forces/: Gravity2D.cpp  WindForce2D.cpp
libs/Physics/src/2d/levels/: ObjectLevel2D.cpp  PhysicsLevel2D.cpp
libs/Physics/src/2d/objects/: Object2D.cpp  RigidObject2D.cpp  SpringMassSystem2D.cpp
libs/Physics/src/3d/: Collider3D.cpp  CollisionUtils3D.cpp  Solver3D.cpp  Transform3D.cpp
libs/Physics/src/3d/forces/: Gravity3D.cpp  WindForce3D.cpp
libs/Physics/src/3d/levels/: PhysicsLevel3D.cpp
libs/Physics/src/3d/objects/: Object3D.cpp  RigidObject3D.cpp
libs/Physics/src/forces/: Gravity.cpp  WindForce.cpp
libs/Physics/src/levels/: PhysicsLevel.cpp
libs/Physics/src/objects/: Object.cpp  RigidObject.cpp
libs/UI/: CMakeLists.txt
libs/UI/include/UI/: Button.h  Checkbox.h  Core.h  Element.h  Global.h  ImageElement.h  Label.h  Slider.h  TextField.h
libs/UI/include/UI/layout/: Cell.h  Dialog.h  Table.h
libs/UI/include/UI/style/: Drawable.h  Style.h  TextureDrawable.h
libs/UI/src/: Button.cpp  Checkbox.cpp  Core.cpp  Element.cpp  Global.cpp  ImageElement.cpp  Label.cpp  Slider.cpp  TextField.cpp
libs/UI/src/layout/: Cell.cpp  Table.cpp
src/: main.cpp
tools/Debug/: CMakeLists.txt
tools/Debug/include/IcosahedronDebug/: ConsoleOutput.h
tools/Debug/src/: ConsoleOutput.cpp
(+44 files in other folders)
